Document generation script env vars

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/beyondchats
+API_BASE_URL=http://localhost:3000
+GOOGLE_PROVIDER=serpapi
+SERPAPI_KEY=
+GOOGLE_CSE_KEY=
+GOOGLE_CSE_CX=
+OPENAI_API_KEY=
+OPENAI_BASE_URL=https://api.openai.com/v1
+OPENAI_MODEL=gpt-4o-mini
