Enable CORS for frontend

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/beyondchats
 API_BASE_URL=http://localhost:3000
+FRONTEND_ORIGIN=http://localhost:5173
 GOOGLE_PROVIDER=serpapi
 SERPAPI_KEY=
 GOOGLE_CSE_KEY=
