--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,5 @@ OPENAI_API_KEY=
 OPENAI_BASE_URL=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4o-mini
 EXTRA_CA_CERTS_PATH=
+REFERENCE_CANDIDATES=10
+REFERENCE_DOMAIN_BLOCKLIST=chatbotsmagazine.com
