Add Ollama as LLM provider

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ OPENAI_MODEL=gpt-4o-mini
 EXTRA_CA_CERTS_PATH=
 REFERENCE_CANDIDATES=10
 REFERENCE_DOMAIN_BLOCKLIST=chatbotsmagazine.com
+LLM_PROVIDER=ollama
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.1
